# RBVMS_2D_NS

./: README.md  readme.txt
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/analysis/: CMakeLists.txt  static.cpp  static.h
cpp/src/error/: CMakeLists.txt  error.C  error.h
cpp/src/lib/: CMakeLists.txt
cpp/src/material/: CMakeLists.txt  elas2D.cpp  elas2D.h
cpp/src/mesh/: CMakeLists.txt  node.cpp  node.h  quad2D.cpp  quad2D.h
cpp/src/pre/: CMakeLists.txt  readsolmech.cpp  readsolmech.h
matlab/: analysis.m  bcinfo.m  gaussint.m  getGP.m  material.m  mesh.m  node.m  nonlintrans.m  run.m  tri3.m
mesh/: bcs.txt  getBCGiD.m  grfFile.grf  p.txt  raw_bcs.txt  t.txt
